make cnc spring making machine detail page 990

--- a/coiling-machines.html
+++ b/coiling-machines.html
@@ -91,12 +91,12 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/coiling-machine/2.png" class="card-img-top product-card-image" alt="CNC Spring Making Machine SFI-690" />
+              <img src="images/coiling-machine/2.png" class="card-img-top product-card-image" alt="CNC Spring Making Machine SFI-990" />
               <div class="card-body">
                 <h5 class="card-title">CNC Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-990</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-990.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
