--- a/coiling-machines.html
+++ b/coiling-machines.html
@@ -137,7 +137,7 @@
                 <h5 class="card-title">CNC Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-740</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-740.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
