--- a/coiling-machines/cnc-spring-making-machine-sfi-6230.html
+++ b/coiling-machines/cnc-spring-making-machine-sfi-6230.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CNC Spring Making Machine SFI-740 | Saffron International</title>
+  <title>CNC Spring Making Machine SFI-6230 | Saffron International</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -65,10 +65,11 @@
         </nav>
         <div class="detail-hero-content">
           <span class="category-kicker">CNC Spring Making Machine</span>
-          <h1>SFI-740</h1>
-          <p>Invention patent technology with 7-axis CNC control for compact, precise spring production.</p>
+          <h1>SFI-6230</h1>
+          <p>Invention patent technology with 6-axis CNC control for large diameter coil spring production.</p>
           <div class="model-tags">
-            <span class="model-pill">SFI-740</span>
+            <span class="model-pill">SFI-6230</span>
+            <span class="model-pill">JS-Z51K-23-6</span>
           </div>
         </div>
       </div>
@@ -79,17 +80,17 @@
         <div class="row g-4 align-items-center">
           <div class="col-lg-6">
             <div class="overview-card">
-              <img src="../images/coiling-machine/5.png" alt="CNC Spring Making Machine SFI-740" />
+              <img src="../images/coiling-machine/6.png" alt="CNC Spring Making Machine SFI-6230" />
             </div>
           </div>
           <div class="col-lg-6">
-            <h2>Compact, high-precision CNC coiling</h2>
+            <h2>Built for large spring coiling</h2>
             <ul class="overview-list">
-              <li>7-axis CNC system with 7 servo motors replaces cam mechanisms.</li>
-              <li>CNC controls outside diameter and spring diameter without mechanical slider changes.</li>
-              <li>Servo-driven auxiliary core cutter for precise, convenient adjustments.</li>
-              <li>Supports straight, opposite, swing, and twisting cutting functions.</li>
-              <li>5G-3D (AW5000) touch control with remote interface and auto-programming.</li>
+              <li>6-axis CNC system with 6 servo motors replaces cam reducing mechanisms.</li>
+              <li>CNC-controlled spring diameter and reducing diameter for easy adjustments.</li>
+              <li>Six-wire feeding shaft reduces force and maintains wire precision.</li>
+              <li>Hydraulic locking on auxiliary core cutter for stable, precise cutting.</li>
+              <li>5G-3D (AW5000) control with remote interface and auto-programming.</li>
             </ul>
             <div class="overview-actions">
               <a href="../index.html#contact" class="btn btn-primary">Request Quote</a>
@@ -104,17 +105,17 @@
       <div class="container">
         <div class="section-header">
           <h2>Machine Features</h2>
-          <p>Details extracted from the provided SFI-740 image.</p>
+          <p>Details extracted from the provided SFI-6230 image.</p>
         </div>
         <div class="detail-card">
           <p>
-            The 7-axis CNC spring machine uses 7 servo motors, abandoning the traditional cam mechanical coiling axis slider.
-            The CNC system directly controls the outside diameter and spring diameter, so the spring rotation only needs the
-            control system to adjust without changing the mechanical reducer slider. The auxiliary core cutter is servo controlled
-            with the cutter, allowing both to move together and maintain the optimal position when changing spring diameter.
-            Straight cutting, opposite cutting, swing cutting, and twisting cutting functions are included. The 5G-3D (AW5000)
-            touch screen control system includes a remote Internet interface and a 3D auto-programming template that generates
-            spring programs automatically; it can be equipped with an image detector.
+            The 6-axis CNC spring machine uses 6 servo motors and abandons the traditional 5-axis cam reducing mechanism. The CNC
+            system directly controls spring diameter and reducing diameter for easy operation. Six sets of wire-feeding shafts
+            reduce force to keep the steel wire precision without crushing. The auxiliary core cutter adopts hydraulic locking
+            after lifting for easy operation with low vibration and high cutting precision. Straight cut, subtend cut, swing cut,
+            and twist cut functions are supported. The 5G-3D (AW5000) touch screen control system includes a remote Internet
+            interface and a 3D auto-programming template that generates spring programs automatically; it can be equipped with an
+            image detector.
           </p>
         </div>
       </div>
@@ -124,28 +125,28 @@
       <div class="container">
         <div class="section-header">
           <h2>Specification</h2>
-          <p>Specifications extracted from the provided SFI-740 image.</p>
+          <p>Specifications extracted from the provided SFI-6230 image.</p>
         </div>
         <div class="table-responsive spec-table">
           <table class="table">
             <thead>
               <tr>
                 <th>Model</th>
-                <th>SFI-740</th>
+                <th>SFI-6230</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>Servo Axes</td>
-                <td>7</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>Wire Diameter (mm)</td>
-                <td>1.0-4.0</td>
+                <td>10-23</td>
               </tr>
               <tr>
                 <td>Outside Diameter (mm)</td>
-                <td>70</td>
+                <td>280</td>
               </tr>
               <tr>
                 <td>Wire Feed Length</td>
@@ -153,11 +154,11 @@
               </tr>
               <tr>
                 <td>Wire Feed Speed (m/min)</td>
-                <td>0-127</td>
+                <td>37 / 100</td>
               </tr>
               <tr>
                 <td>Production Rate (pcs/min)</td>
-                <td>&lt;= 200</td>
+                <td>&lt;= 80</td>
               </tr>
               <tr>
                 <td>Left or Right Winding Rate (Dm/d)</td>
@@ -165,43 +166,39 @@
               </tr>
               <tr>
                 <td>Wire Feed Cam</td>
-                <td>3</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>Wire Feed Axis (kw)</td>
-                <td>5.5</td>
+                <td>55</td>
               </tr>
               <tr>
                 <td>Diameter Axis (kw)</td>
-                <td>1.5 kw x 2</td>
+                <td>15 x 2</td>
               </tr>
               <tr>
                 <td>Pitch Axis (kw)</td>
-                <td>1</td>
+                <td>7</td>
               </tr>
               <tr>
                 <td>Upper Cutting Axis (kw)</td>
-                <td>2.7</td>
+                <td>30</td>
               </tr>
               <tr>
                 <td>Lower Cutting Axis (kw)</td>
-                <td>2.7</td>
-              </tr>
-              <tr>
-                <td>Auxiliary Axis (kw)</td>
-                <td>1</td>
+                <td>30</td>
               </tr>
               <tr>
                 <td>Servo Motor (kw)</td>
-                <td>15.9</td>
+                <td>152</td>
               </tr>
               <tr>
                 <td>Dimensions L x W x H (mm)</td>
-                <td>1600 x 1200 x 1850</td>
+                <td>4650 x 3000 x 3360</td>
               </tr>
               <tr>
-                <td>Machine Weight (kg)</td>
-                <td>1650</td>
+                <td>Machine Weighing Weight (kg)</td>
+                <td>36800</td>
               </tr>
             </tbody>
           </table>
@@ -209,6 +206,7 @@
       </div>
     </section>
   </main>
+
   <footer class="site-footer">
     <div class="container">
       <div class="row g-4">
