make deail page

--- a/coiling-machines.html
+++ b/coiling-machines.html
@@ -163,7 +163,7 @@
                 <h5 class="card-title">CNC Spring Machine</h5>
                 <p class="card-text">Model: SFI-6160R</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-6160r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
