--- a/coiling-machines/cnc-spring-making-machine-sfi-6160r.html
+++ b/coiling-machines/cnc-spring-making-machine-sfi-6160r.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CNC Spring Making Machine SFI-6230 | Saffron International</title>
+  <title>CNC Spring Machine SFI-6160R | Saffron International</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -53,6 +53,7 @@
       </div>
     </nav>
   </header>
+
   <main>
     <section class="detail-hero">
       <div class="container">
@@ -60,16 +61,16 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../index.html#home">Home</a></li>
             <li class="breadcrumb-item"><a href="../coiling-machines.html">Coiling Machines</a></li>
-            <li class="breadcrumb-item active" aria-current="page">CNC Spring Making Machine</li>
+            <li class="breadcrumb-item active" aria-current="page">CNC Spring Machine</li>
           </ol>
         </nav>
         <div class="detail-hero-content">
-          <span class="category-kicker">CNC Spring Making Machine</span>
-          <h1>SFI-6230</h1>
-          <p>Invention patent technology with 6-axis CNC control for large diameter coil spring production.</p>
+          <span class="category-kicker">CNC Spring Machine</span>
+          <h1>SFI-6160R</h1>
+          <p>Invention patent technology with 6-axis CNC control for high-precision spring coiling.</p>
           <div class="model-tags">
-            <span class="model-pill">SFI-6230</span>
-            <span class="model-pill">JS-Z51K-23-6</span>
+            <span class="model-pill">SFI-6160R</span>
+            <span class="model-pill">JS-Z51K-16-6R</span>
           </div>
         </div>
       </div>
@@ -80,16 +81,16 @@
         <div class="row g-4 align-items-center">
           <div class="col-lg-6">
             <div class="overview-card">
-              <img src="../images/coiling-machine/6.png" alt="CNC Spring Making Machine SFI-6230" />
+              <img src="../images/coiling-machine/7.png" alt="CNC Spring Machine SFI-6160R" />
             </div>
           </div>
           <div class="col-lg-6">
-            <h2>Built for large spring coiling</h2>
+            <h2>Precision coiling with 6-axis control</h2>
             <ul class="overview-list">
-              <li>6-axis CNC system with 6 servo motors replaces cam reducing mechanisms.</li>
-              <li>CNC-controlled spring diameter and reducing diameter for easy adjustments.</li>
-              <li>Six-wire feeding shaft reduces force and maintains wire precision.</li>
-              <li>Hydraulic locking on auxiliary core cutter for stable, precise cutting.</li>
+              <li>6-axis CNC system with 6 servo motors replaces traditional cam mechanisms.</li>
+              <li>Designed for 8-16 mm wire with stable, accurate coiling.</li>
+              <li>Five wire feed rollers ensure precision without crushing.</li>
+              <li>Two-speed wire feeding supports high-speed and low-speed operations.</li>
               <li>5G-3D (AW5000) control with remote interface and auto-programming.</li>
             </ul>
             <div class="overview-actions">
@@ -100,37 +101,40 @@
         </div>
       </div>
     </section>
+
     <section class="section">
       <div class="container">
         <div class="section-header">
           <h2>Machine Features</h2>
-          <p>Details extracted from the provided SFI-6230 image.</p>
+          <p>Details extracted from the provided SFI-6160R image.</p>
         </div>
         <div class="detail-card">
           <p>
-            The 6-axis CNC spring machine uses 6 servo motors and abandons the traditional 5-axis cam reducing mechanism. The CNC
-            system directly controls spring diameter and reducing diameter for easy operation. Six sets of wire-feeding shafts
-            reduce force to keep the steel wire precision without crushing. The auxiliary core cutter adopts hydraulic locking
-            after lifting for easy operation with low vibration and high cutting precision. Straight cut, subtend cut, swing cut,
-            and twist cut functions are supported. The 5G-3D (AW5000) touch screen control system includes a remote Internet
+            The CNC spring machine uses 6 sets of servo motors and abandons the traditional 5-axis cam reducing mechanism.
+            The CNC system directly controls spring diameter and reducing diameter for easy operation. When coiling 15 mm oil
+            tempering wire, five groups of wire feed rollers ensure precision without crushing, and the wire feed traction keeps
+            wire feed accuracy. The wire bending mechanism speeds up for the first circle of spring bending after changing to a
+            new wire. Straight cut, subtend cut, swing cut, and twist cut functions are supported. Wire feeding uses two-speed
+            transmission for high speed and low speed. The 5G-3D (AW5000) touch screen control system includes a remote Internet
             interface and a 3D auto-programming template that generates spring programs automatically; it can be equipped with an
             image detector.
           </p>
         </div>
       </div>
     </section>
+
     <section class="section detail-alt">
       <div class="container">
         <div class="section-header">
           <h2>Specification</h2>
-          <p>Specifications extracted from the provided SFI-6230 image.</p>
+          <p>Specifications extracted from the provided SFI-6160R image.</p>
         </div>
         <div class="table-responsive spec-table">
           <table class="table">
             <thead>
               <tr>
                 <th>Model</th>
-                <th>SFI-6230</th>
+                <th>SFI-6160R</th>
               </tr>
             </thead>
             <tbody>
@@ -140,11 +144,11 @@
               </tr>
               <tr>
                 <td>Wire Diameter (mm)</td>
-                <td>10-23</td>
+                <td>8.0-16.0</td>
               </tr>
               <tr>
                 <td>Outside Diameter (mm)</td>
-                <td>280</td>
+                <td>210</td>
               </tr>
               <tr>
                 <td>Wire Feed Length</td>
@@ -156,7 +160,7 @@
               </tr>
               <tr>
                 <td>Production Rate (pcs/min)</td>
-                <td>&lt;= 80</td>
+                <td>&lt;= 90</td>
               </tr>
               <tr>
                 <td>Left or Right Winding Rate (Dm/d)</td>
@@ -164,39 +168,39 @@
               </tr>
               <tr>
                 <td>Wire Feed Cam</td>
-                <td>6</td>
+                <td>5</td>
               </tr>
               <tr>
                 <td>Wire Feed Axis (kw)</td>
-                <td>55</td>
+                <td>37</td>
               </tr>
               <tr>
                 <td>Diameter Axis (kw)</td>
-                <td>15 x 2</td>
+                <td>5.5 x 2</td>
               </tr>
               <tr>
                 <td>Pitch Axis (kw)</td>
-                <td>7</td>
+                <td>5.5</td>
               </tr>
               <tr>
                 <td>Upper Cutting Axis (kw)</td>
-                <td>30</td>
+                <td>25</td>
               </tr>
               <tr>
                 <td>Lower Cutting Axis (kw)</td>
-                <td>30</td>
+                <td>25</td>
               </tr>
               <tr>
                 <td>Servo Motor (kw)</td>
-                <td>152</td>
+                <td>103.5</td>
               </tr>
               <tr>
                 <td>Dimensions L x W x H (mm)</td>
-                <td>4650 x 3000 x 3360</td>
+                <td>3650 x 2300 x 2800</td>
               </tr>
               <tr>
                 <td>Machine Weighing Weight (kg)</td>
-                <td>36800</td>
+                <td>22000</td>
               </tr>
             </tbody>
           </table>
@@ -204,6 +208,7 @@
       </div>
     </section>
   </main>
+
   <footer class="site-footer">
     <div class="container">
       <div class="row g-4">
