--- a/coiling-machines.html
+++ b/coiling-machines.html
@@ -71,11 +71,9 @@
         </div>
       </div>
     </section>
-
     <section class="section">
       <div class="container">
         <div class="row g-4">
-
         <div class="col-md-6 col-lg-4">
             <div class="card product-card">
               <img src="images/coiling-machine/1.png" class="card-img-top product-card-image" alt="CNC Spring Making Machine SFI-11250" />
@@ -102,7 +100,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
               <img src="images/coiling-machine/3.png" class="card-img-top product-card-image" alt="CNC Spring Making Machine SFI-690" />
@@ -202,7 +199,7 @@
                 <h5 class="card-title">CNC Mould Coil Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-660Y</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-660y.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
