make deatil page for coiling category page

--- a/coiling-machines.html
+++ b/coiling-machines.html
@@ -212,7 +212,7 @@
                 <h5 class="card-title">CNC Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-660</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="/coiling-machines/cnc-spring-making-machine-sfi-660.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -225,7 +225,7 @@
                 <h5 class="card-title">CNC Spring Coiling Machine</h5>
                 <p class="card-text">Model: SFI-590, SFI-5120, SFI-5180, SFI-5200</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-coiling-machine-sfi-590.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
