make ad new 3 deatil page of coiling category

--- a/coiling-machines.html
+++ b/coiling-machines.html
@@ -238,7 +238,7 @@
                 <h5 class="card-title">Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-520</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-520.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -251,7 +251,7 @@
                 <h5 class="card-title">CNC Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-345</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-345.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -264,7 +264,7 @@
                 <h5 class="card-title">CNC Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-335, SFI-325, SFI-316</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-335-325-316.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -277,7 +277,7 @@
                 <h5 class="card-title">CNC Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-8</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-8.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
