make new category page of special purpose machine

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a class="dropdown-item" href="spring-forming-machines.html">Spring Forming Machines</a></li>
                 <li><a class="dropdown-item" href="wire-bending-machines.html">Wire Bending Machines</a></li>
                 <li><a class="dropdown-item" href="coiling-machines.html">Coiling Machines</a></li>
-                <li><a class="dropdown-item" href="#categories">Special Purpose Machines</a></li>
+                <li><a class="dropdown-item" href="special-purpose-machine.html">Special Purpose Machines</a></li>
                 <li><a class="dropdown-item" href="#categories">Grinding Machines / Grinding Wheels</a></li>
                 <li><a class="dropdown-item" href="#categories">Furnace Machines</a></li>
                 <li><a class="dropdown-item" href="#categories">Controllers</a></li>
