--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spring Forming Machines | Saffron International</title>
+  <title>Special Purpose Machines | Saffron International</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -60,13 +60,13 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html#home">Home</a></li>
             <li class="breadcrumb-item"><a href="index.html#categories">Categories</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Spring Forming Machines</li>
+            <li class="breadcrumb-item active" aria-current="page">Special Purpose Machines</li>
           </ol>
         </nav>
         <div class="category-hero-content">
           <span class="category-kicker">Category</span>
-          <h1>Spring Forming Machines</h1>
-          <p>Precision-built spring forming solutions with reliable performance and consistent output.</p>
+          <h1>Special Purpose Machines</h1>
+          <p>Purpose-built solutions engineered for specialized production needs and repeatable accuracy.</p>
         </div>
       </div>
     </section>
@@ -75,12 +75,12 @@
         <div class="row g-4">
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/1.png" class="card-img-top product-card-image" alt="CNC Spring Forming Machine" />
+              <img src="images/special-purpose-machine/1.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-PR-8S" />
               <div class="card-body">
-                <h5 class="card-title">CNC Spring Forming Machine</h5>
-                <p class="card-text">Model: SI-20 F, SI-35F</p>
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-PR-8S,SFI-PR-8RS,SFI-PR-8MU</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/cnc-spring-forming-si-20f-si-35f.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -88,12 +88,12 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/2.png" class="card-img-top product-card-image" alt="CNC Spring Forming Machine" />
+              <img src="images/special-purpose-machine/4.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-XS 80BC" />
               <div class="card-body">
-                <h5 class="card-title">CNC Spring Forming Machine</h5>
-                <p class="card-text">Model: SI-25FR, SI-45 FR</p>
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-XS 80BC,SFI-XS 80BC-S</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/cnc-spring-forming-si-25fr-si-45fr.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -101,12 +101,12 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/3.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
+              <img src="images/special-purpose-machine/5.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-CN-8R" />
               <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-1025</p>
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-CN-8R,SFI-CN-5R,SFI-CN-5ER,SFI-CN-5E,SFI-CN-PF5,SFI-CN-EP5</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1025.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -114,25 +114,12 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/4.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
+              <img src="images/special-purpose-machine/10.png" class="card-img-top product-card-image" alt="Special Purpose Machine GT-RF6" />
               <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-1225R</p>
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: GT-RF6,GT-RF8,GT-RF10,GT-RF12,GT-RF14,GT-RF16,GT-RF30-B,GT-RF35-B</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1225r.html" class="btn btn-outline-secondary">View Detail</a>
-                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
-                </div>
-              </div>
-            </div>
-          </div>               
-          <div class="col-md-6 col-lg-4">
-            <div class="card product-card">
-              <img src="images/forming-machine/5.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
-              <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-1265R</p>
-                <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1265r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -140,12 +127,12 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/6.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
+              <img src="images/special-purpose-machine/13.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFIXS-6W" />
               <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-525R</p>
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFIXS-6W,SFI-XS-8W,SFI-XS-10W,SFI-XS-2060,SFI-XS-2080</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-525r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -153,12 +140,116 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/7.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
+              <img src="images/special-purpose-machine/16.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-RH12" />
               <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-20</p>
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-RH12,SFI-JH12,SFI-JH10W,SFI-JH12W,SFI-DB-6W</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-20.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/21.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI3DR-50" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI3DR-50,SFI3DR-60,SFI3D-6F,SFITH6,SFITH8,SFITH10</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/8.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-SUS4" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-SUS4 (stainless steel),SFI-SUS6 (stainless steel),SFI-2D60-6,SFI-3D80-8,SFI-3D80-10</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/9.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-SF-10T" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-SF-10T,SFI-SF-26T,SFI-SF-38T</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/10.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-LR-30" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-LR-30,SFI-LR-40,SFI-LR-30PC,SFI-LR-40PC,SFI-LR-50PC</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/11.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-CR-35PC" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-CR-35PC,SFI-CR-45PC,SFI-CR-60PC,SFI-CR-50</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/12.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-CH5" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-CH5,SFI-CH5P,SFI-CH-5W,SFI-CH-5HW,SFI-CH-5B,SFI-AL</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/13.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-CM 5" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-CM 5,SFI-CIR-2.5,SFI-CIR-4,SFI-CIR-6,SFI-DCM2.5,SFI-BZ4</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card product-card">
+              <img src="images/special-purpose-machine/14.png" class="card-img-top product-card-image" alt="Special Purpose Machine SFI-CM 4(W)" />
+              <div class="card-body">
+                <h5 class="card-title">Special Purpose Machine</h5>
+                <p class="card-text">Model: SFI-CM 4(W),SFI-CMB6(W),SFI-CMB8(W),SFI-CMB9(W),SFI-CMB10(W),SFI-TCM38,SFI-GOLD 2-W</p>
+                <div class="product-actions">
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -204,7 +295,6 @@
             <li><i class="fa-solid fa-phone"></i> +91 8178392837</li>
             <li><i class="fa-solid fa-envelope"></i> info@shriyamas.com</li>
           </ul>
-          
           <div class="footer-social">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
