--- a/wire-bending-machines.html
+++ b/wire-bending-machines.html
@@ -35,7 +35,7 @@
                 <li><a class="dropdown-item" href="spring-forming-machines.html">Spring Forming Machines</a></li>
                 <li><a class="dropdown-item" href="wire-bending-machines.html">Wire Bending Machines</a></li>
                 <li><a class="dropdown-item" href="coiling-machines.html">Coiling Machines</a></li>
-                <li><a class="dropdown-item" href="index.html#categories">Special Purpose Machines</a></li>
+                <li><a class="dropdown-item" href="special-purpose-machine.html">Special Purpose Machines</a></li>
                 <li><a class="dropdown-item" href="index.html#categories">Grinding Machines / Grinding Wheels</a></li>
                 <li><a class="dropdown-item" href="index.html#categories">Furnace Machines</a></li>
                 <li><a class="dropdown-item" href="index.html#categories">Controllers</a></li>
