make new deatl page of special purpose machine

--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -80,7 +80,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-PR-8S,SFI-PR-8RS,SFI-PR-8MU</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-pr-8s-8rs-8mu.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
